add section: oferta

--- a/index.html
+++ b/index.html
@@ -64,9 +64,8 @@
     </div>
   </nav>
   <!-- HERO -->
-  <div class="row h-75 flex-nowrap">
+  <div class="row h-75 m-0 flex-nowrap">
     <!-- hero left -->
-    <!-- <div class="col h-100 bg-sand" style="min-width: 700px"> -->
     <div class="col col-sm-7 col-lg-6 h-100 bg-sand">
       <div class="m-5">
         <h1 class="mb-5">
@@ -111,7 +110,62 @@
       </div>
     </div>
   </div>  
-
+  <!-- OFERTA -->
+  <div class="d-flex flex-column justify-content-center gap-5 justify-content-lg-around align-items-center h-75 w-100 bg-lightsand">
+    <div class="d-flex flex-column col-sm-8 col-xl-5">
+      <h5 class="text-success text-capitalize">oferta</h5>
+      <div class="d-flex flex-column">
+        <h1 class="fw-medium display-5 mb-4">
+          <span class="text-capitalize">działamy</span>
+          <span class="fst-italic">kompleksowo</span>
+        </h1>
+        <div class="">
+          <span class="text-capitalize">oferujemy</span> kompletną obsługę inwestycji terenów zielonych.
+          <span class="text-capitalize">Projektujemy</span> nowoczesne ogrody przydomowe oraz rezydencjonalne.
+          <span class="text-capitalize">Stworzymy</span> dla Ciebie projekt, zwizualizujemy go i wcielimy w życie, a na każdym etapie posłużymy radą i wieloletnim doświadczeniem.
+        </div>
+      </div>  
+    </div>
+    <div class="d-flex w-100 justify-content-around justify-content-xl-center gap-2 gap-xl-5 px-2">
+      <div class="card border-0 rounded-4 col col-lg-4 col-xl-3 col-xxl-2" >
+        <div class="card-body">
+          <img src="images/icons/pencil.png" class="mb-3"></img>
+          <h3 class="text-capitalize">projekty</h3>
+          <p class="card-text">Zaprojektujemy Twój ogród w nowoczesnym stylu i z najlepszym wykorzystaniem istniejącej przestrzeni.</p>
+        </div>
+        <div class="card-body">
+          <a href="" class="link-success mt-5 fw-semibold">
+            <span class="text-capitalize">dowiedz</span> się więcej &rarr;
+          </a>
+        </div>
+      </div>
+      <div class="card border-0 rounded-4 col col-lg-4 col-xl-3 col-xxl-2" >
+        <div class="card-body">
+          <img src="images/icons/eye.png" class="mb-3"></img>
+          <h3 class="text-capitalize">wizualizacje</h3>
+          <p class="card-text">Przedstawimy Ci projekty koncepcyjne w postaci wirtualnego spaceru animowanego w technologii 3D.</p>
+        </div>
+        <div class="card-body">
+          <a href="" class="link-success mt-5 fw-semibold">
+            <span class="text-capitalize line">dowiedz</span> się więcej &rarr;
+          </a>
+        </div>
+      </div>
+      <div class="card border-0 rounded-4 col col-lg-4 col-xl-3 col-xxl-2" >
+        <div class="card-body">
+          <img src="images/icons/stars.png" class="mb-3"></img>
+          <h3 class="text-capitalize">realizacje</h3>
+          <p class="card-text">Zrealizujemy Twoje marzenie przy użyciu najnowszych rozwiązań i zaawansowanych technologii.</p>
+        </div>
+        <div class="card-body">
+          <a href="" class="link-success mt-5 fw-semibold">
+            <span class="text-capitalize">zobacz</span> nasze realizacje &rarr;
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+   
   <!-- Bootstrap 5.3.1 link -->
   <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
